--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "store2": "^2.14.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
