--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-icons": "^5.2.1",
