--- a/package.json
+++ b/package.json
@@ -4,27 +4,26 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
-    "serve": "react-dotenv && serve build",
-    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "and-design": "^0.0.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
-    "env-cmd": "^10.1.0",
     "i18next": "^23.12.1",
+    "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
-    "react-dotenv": "^0.1.3",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
@@ -44,11 +43,5 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
-  },
-  "react-dotenv": {
-    "whitelist": [
-      "REACT_APP_API",
-      "REACT_APP_URL_TEST"
-    ]
   }
 }
